--- a/tableconc/style.css
+++ b/tableconc/style.css
@@ -2,6 +2,7 @@
     --dark-blue: #2a3347;
     --medium-blue: #384a73;
     --steelblue: #4682b4;
+    --royalblue: #4169e1;
     --results-blue: #0047ab;
     --lightsteelblue: #b0c4de;
     --red: #ff0000;  /* hilite color 1 */
@@ -79,9 +80,10 @@ a {
 #showing-start, #show-rows {
     border-radius: 5px;
     padding: 0px 3px;
-    width: 40px;
+    min-width: 35px;
+    max-width: 55px;
     border: 1px solid var(--off-white);
-    background-color: var(--off-white);
+    background-color: #a9f1ea;
     text-align: center;
 }
 
@@ -580,6 +582,8 @@ td#search-logic {
     z-index: 101 !important;
     border-radius: 3px;
     min-width: 120px;
+    border-top: 1px solid var(--royalblue);
+    border-bottom: 1px solid var(--royalblue);
 }
 
 .menu-infotiptext a {
@@ -590,7 +594,7 @@ td#search-logic {
 }
 
 .menu-infotiptext a:hover {
-    background-color: #252525;
+    background-color: var(--royalblue);
 }
 
 .controls-infotiptext, .controls-infotiptext-2 {
@@ -607,7 +611,7 @@ td#search-logic {
 }
 
 .controls-infotiptext-2 {
-    margin: -18px 0 0 50px;
+    margin: -50px 0 0 5px;
 }
 
 .controls-infotip:hover .menu-infotiptext {
